# AdventOfCode

./: .gitignore  Pipfile  README.md  pytest.ini  run_all_2020.sh  run_all_2021.sh  rustfmt.toml
advent_2019/: Cargo.toml
advent_2019/src/: lib.rs
advent_2020/: __init__.py  day_01.py  day_01_test.py  day_02.py  day_02_test.py  day_03.py  day_03_test.py  day_04.py  day_04_test.py  day_05.py  day_05_test.py  day_06.py  day_06_test.py  day_07.py  day_07_test.py  day_08.py  day_08_test.py  day_09.py  day_09_test.py  day_10.py  day_10_test.py  day_11.py  day_11_test.py  day_12.py  day_12_test.py  day_13.py  day_13_test.py  day_14.py  day_14_test.py  day_15.py  day_15_test.py  day_16.py  day_16_test.py  day_17.py  day_17_test.py  day_18.py  day_18_test.py  day_19.py  day_19_test.py  day_20.py  (+11 more)
advent_2020/input/: day_17_a.txt  day_19_a.txt  day_20_a.txt  day_24_a.txt
advent_2021/: Cargo.toml  day_01.py  day_01_test.py  day_02.py  day_02_test.py  day_03.py  day_03_test.py  day_04.py  day_04_test.py  day_05.py  day_05_test.py  day_06.py  day_06_test.py  day_07.py  day_07_test.py  day_08.py  day_08_test.py  day_09.py  day_09_test.py  day_10.py  day_10_test.py  day_11.py  day_11_test.py  day_12.py  day_12_test.py  day_13.py  day_13_test.py  day_14.py  day_14_test.py  day_15.py  day_15_test.py  day_16.py  day_16_test.py  day_17.py  day_17_test.py  day_18.py  day_18_test.py  day_19.py  day_19_test.py  day_20.py  (+11 more)
advent_2022/: Cargo.toml
advent_2023/: Cargo.toml
advent_2023/data/: day_20.dot
advent_2023/src/: lib.rs
